kubernetes 구축/Kind-apple-m시리즈-Kubernetes-구축/Kind_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy-ingress
  template:
    metadata:
      labels:
        app: deploy-ingress
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: deploy-ingress
        image: nginx:alpine
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: deploy-ingress
spec:
  type: ClusterIP
  selector:
    app: deploy-ingress
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: jinseong.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy-ingress
            port:
              number: 80
